# api/main.go
@@ -37,16 +37,21 @@ var (
 	httpRouter        router.Router                  = router.NewFiberRouter()
 )
 
-// @title			Stickerfy API
-// @version		1.0
-// @description	A fun sticker store REST API
-// @termsOfService	https://swagger.io/terms/
-// @contact.name	Max Guzman
-// @contact.email	max.guzman@icloud.com
-// @license.name	Apache 2.0
-// @license.url	https://www.apache.org/licenses/LICENSE-2.0.html
-// @BasePath		/
-// @host			localhost:8000
+//	@title				Stickerfy API
+//	@version			1.0
+//	@description		A fun sticker store REST API
+//	@termsOfService		https://swagger.io/terms/
+//	@contact.name		Max Guzman
+//	@contact.email		max.guzman@icloud.com
+//	@license.name		Apache 2.0
+//	@license.url		https://www.apache.org/licenses/LICENSE-2.0.html
+//	@BasePath			/
+//	@host				localhost:8000
+//	@schemes			http https
+//	@tag.name			products
+//	@tag.description	Products API
+//	@tag.name			orders
+//	@tag.description	Orders API
 func main() {
 	middleware.FiberMiddleware(httpRouter)
 	routes.SwaggerRoute(httpRouter)
